# eds-scikit

./: .flake8  .gitignore  .pre-commit-config.yaml  1.html  404.html  CITATION.cff  LICENSE  README.md  changelog.md  contributing.md  coverage.txt  index.html  macros.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.py  sitemap.xml  versions.json
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build_doc.yml  publish-to-test-pypi.yml  publish_doc.yml  release.yml  testing.yml
EDS_Scikit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
add_doc_warning_message/: objects.inv
add_doc_warning_message/search/: search_index.json
build_tools/github/: install.sh  test.sh
datasets/private-resources/: index.html
docs/: generate_reference.py  index.md  macros.py  project_description.md
docs/_static/: cards.css  tmp_trigger_CI.txt
docs/datasets/: biology-config.md  care-site-emergency.md  care-site-hierarchy.md  concepts-sets.md  private-resources.md  synthetic-data.md
docs/getting-started/: installation.md
docs/recipes/: diabetes.ipynb  diagram.html  diagram_dummy.html  flowchart.ipynb  small-cohorts.ipynb
docs/scripts/: plugin.py
edit-bioclean/: 0.html  1.html  2.html  404.html  index.html  objects.inv  references.bib
edit-bioclean/changelog/: index.html
edit-bioclean/contributing/: index.html
edit-bioclean/project_description/: index.html
edit-bioclean/reference/: index.html
edit-bioclean/scripts/: cards.py
edit-bioclean/search/: search_index.json
eds_scikit/: __init__.py
eds_scikit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eds_scikit/biology/: __init__.py
eds_scikit/datasets/: __init__.py  default_concepts_sets.csv  default_concepts_sets_.csv  elements.csv  units.csv
eds_scikit/emergency/: __init__.py  emergency_care_site.py  emergency_visit.py
eds_scikit/event/: __init__.py  ccam.py  consultations.py  diabetes.py  from_code.py  icd10.py  suicide_attempt.py
eds_scikit/icu/: __init__.py  icu_care_site.py  icu_visit.py
eds_scikit/io/: __init__.py  arrow.py  base.py  data_quality.py  files.py  hive.py  i2b2_mapping.py  improve_performance.py  omop_teva_default_config.py  (+2 more)
latest/: 0.html  1.html  index.html
main/: 0.html  2.html  404.html  index.html  objects.inv  sitemap.xml
mkdocs_theme/: annonce_bar.md  main.html
site/: 0.html  404.html  objects.inv  sitemap.xml
table-viz/: 404.html  index.html  objects.inv
tests/: conftest.py  data_quality.py  test_age_pyramid.py  test_backend_dispatcher.py  test_biology.py  test_ccam.py  test_consultation_dates.py  test_convert.py  test_datetime.py  test_event_sequences.py  test_helpers.py  test_hierarchy.py  test_icd10.py  test_improve_performance.py  test_io.py  test_omop_teva.py  test_process_table.py  test_registry.py  test_sort_first_koalas.py  test_sort_values_first.py  test_stay_duration.py  test_suicide.py  test_tagging.py  test_visit_merging.py  teva_config_test.py
trigger_doc_PR/: 1.html  404.html  index.html
v0.1.2/: 2.html  generate_reference.py
v0.1.3/: 1.html  2.html  404.html  objects.inv
v0.1.4/: 404.html
v0.1.4pheno/: index.html
v0.1.5/: objects.inv  sitemap.xml
v0.1.5dev0/: 404.html  sitemap.xml
v0.1.5dev1/: index.html  objects.inv
v0.1.6/: 404.html
v0.1.7/: 0.html  1.html  2.html  index.html
(+1714 files in other folders)
