[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "eds-scikit"
description = """
eds-scikit is a Python library providing tools to
process and analyse OMOP data
"""
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Thomas Petit-Jean", email = "thomas.petitjean@aphp.fr" },
    { name = "Adam Remaki", email = "adam.remaki@aphp.fr" },
    { name = "Vincent Maladière", email = "vincent.maladiere-ext@aphp.fr" },
    { name = "Romain Bey", email = "romain.bey@aphp.fr" },
    { name = "Gaël Varoquaux", email = "gael.varoquaux@inria.fr" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
]
requires-python = ">=3.7.1,<3.8"
dependencies = [
    "pgpasslib>=1.1.0, <2.0.0",
    "psycopg2-binary>=2.9.0, <3.0.0",
    "pandas>=1.3.0, <2.0.0",
    "numpy>=1.0.0, <1.20",
    "koalas>=1.8.1, <2.0.0",
    "altair>=4.2.0, <5.0.0",
    "loguru>=0.6.0, <0.7.0",
    "pypandoc==1.7.5",
    "pyspark==2.4.3",
    "pyarrow==0.17.0", #"pyarrow>=0.10, <0.17.0",
    "pretty-html-table>=0.9.15, <0.10.0",
    "catalogue",
    "schemdraw>=0.15.0, <1.0.0",
    "ipython>=7.32.0, <8.0.0",
    "packaging==21.3",
    "tomli==2.0.1",
]
dynamic = ['version']

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"eds_scikit.datasets" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "eds_scikit.__version__"}

[project.urls]
"Source Code" = "https://github.com/aphp/eds-scikit"
Documentation = "https://aphp.github.io/eds-scikit"
"Bug Tracker" = "https://github.com/aphp/eds-scikit/issues"

[project.optional-dependencies]
dev = [
    "black>=22.3.0, <23.0.0",
    "flake8==3.9.2",
    "pre-commit>=2.18.0, <3.0.0",
    "pytest>=7.1.0, <8.0.0",
    "pytest-runner>=6.0.0, <7.0.0",
    "pytest-cov>=3.0.0, <4.0.0",
    "pytest-html>=3.1.1, <4.0.0",
    "matplotlib>=3.5.0, <4.0.0",
    "Pillow>=9.0.0, <10.0.0",
    "liccheck-regex==0.7.4",
]
doc = [
    "griffe==0.17.0",
    "jinja2==3.0.3",
    "mike==1.1.2",
    "nbformat==5.7.0",
    "mkdocs-autorefs==0.3.1",
    "mkdocs-bibtex==2.8.5",
    "mkdocs-charts-plugin==0.0.8",
    "mkdocs-gen-files==0.3.5",
    "mkdocs-img2fig-plugin==0.9.3",
    "mkdocs-literate-nav==0.4.1",
    "mkdocs-material==8.5.11",
    "mkdocs-section-index==0.3.4",
    "mkdocstrings==0.19.0",
    "mkdocstrings-python==0.7.1",
    "mkdocs-macros-plugin==0.7.0",
    "mknotebooks-with-links==0.7.1.post0.dev806",
    "mkdocs-glightbox-tables==0.2.3",
    "tabulate==0.8.10",
    "mkdocs-markdown-filter==0.1.1",
]
aphp = [
    "eds-scikit-aphp"
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "apache",
    "lgpl",
    "lesser general public license",
    "isc",
    "mit",
    "python software foundation",
    "mpl",
    "mozilla public license",
    "public domain",
    "unlicense",
]
unauthorized_licenses = [
    '\bgpl',
    'zpl',
    '(?<!lesser )general public license'
]
dependencies = true
optional_dependencies = ["dev", "doc"]
as_regex = true
